--- a/src/templates/.env.template
+++ b/src/templates/.env.template
@@ -1,6 +1,4 @@
-PINNING_SERVICE_NAME="nft.storage"
-PINNING_SERVICE_ENDPOINT="https://nft.storage/api"
-
+PINNING_SERVICE_ENDPOINT=https://api.nft.storage
 PINNING_SERVICE_KEY=
 
 FLOW_TESTNET_ADDRESS=
