Init repo after mint.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-.idea
-node_modules
-.env
+*
 
-#Hardhat files
-cache
-artifacts
+!.gitignore
+!src/**/*
+!/LICENSE.md
+!/README.md
+!/package.json
+!/package-lock.json
+
