--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
     "ora": "3.1.0",
+    "simple-git": "^2.46.0",
     "yaml": "^1.10.2"
   }
 }
