--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.idea
-node_modules
-.env
+* 
 
-#Hardhat files
-cache
-artifacts
+!src/*
+!LICENSE.md
+!README.md
+!package.json
+!package-lock.json
