--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "json-colorizer": "^2.2.2",
     "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
-    "ora": "3.1.0",
-    "yaml": "^1.10.2"
+    "ora": "3.1.0"
   }
 }
