--- a/src/templates/web/package.json
+++ b/src/templates/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ dir }}",
+  "name": "NiftNFT",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.3.1",
     "@onflow/fcl": "0.0.77",
     "@onflow/types": "0.0.5",
+    "cids": "^1.1.9",
+    "ipfs-only-hash": "^4.0.0",
     "next": "11.1.2",
     "next-seo": "^4.28.1",
     "nft.storage": "^3.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.6",
