--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onflow/freshmint",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.1",
   "description": "The minty fresh way to launch an NFT project.",
   "author": "Mackenzie Kieran",
   "contributors": [
