--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,8 @@
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
