--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "handlebars": "^4.7.7",
     "inquirer": "^8.0.0",
     "json-colorizer": "^2.2.2",
+    "multiformats": "^9.5.1",
     "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
     "node-fetch": "^2.6.0",
     "ora": "3.1.0",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "sha3": "^2.1.4"
   }
 }
