--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "csv-parse": "^4.16.3",
+    "csv-writer": "^1.6.0",
     "dotenv": "^10.0.0",
     "elliptic": "^6.5.4",
     "fs-extra": "^10.0.0",
@@ -33,6 +34,7 @@
     "inquirer": "^8.0.0",
     "json-colorizer": "^2.2.2",
     "multiformats": "^9.5.1",
+    "mute-stdout": "^2.0.0",
     "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
     "node-fetch": "^2.6.0",
