--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onflow/freshmint",
-  "version": "2.0.0-airdrop.0",
+  "version": "2.2.0-alpha.0",
   "description": "The minty fresh way to launch an NFT project.",
   "author": "Mackenzie Kieran",
   "contributors": [
