--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ora": "3.1.0",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
+    "progress": "^2.0.3",
     "sha3": "^2.1.4"
   }
 }
