--- a/src/templates/docker-compose.yml
+++ b/src/templates/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       - FLOW_SERVICEKEYHASHALGO=SHA3_256
       - FLOW_VERBOSE=true
   dev-wallet:
-    image: ghcr.io/onflow/fcl-dev-wallet:latest
+    image: ghcr.io/onflow/fcl-dev-wallet:0.3.4
     ports:
       - "8701:8701"
     environment:
       - PORT=8701
+      - BASE_URL=http://localhost:8701
       - FLOW_ACCESS_NODE=http://emulator:8080
       - FLOW_ACCOUNT_ADDRESS=0xf8d6e0586b0a20c7
       - FLOW_ACCOUNT_KEY_ID=0
