--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "nft",
     "blockchain"
   ],
-  "main": "src/fresh.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "engines": {
+    "node": ">=14.0.0"
   },
+  "main": "dist/cli/fresh.js",
   "bin": {
-    "fresh": "src/index.js"
+    "fresh": "dist/cli/index.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "tsc --build --clean",
+    "build": "tsc",
+    "postbuild": "cpx --include-empty-dirs \"src/cli/templates/**\" dist/cli/templates",
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "@onflow/decode": "0.0.11",
@@ -27,20 +34,29 @@
     "commander": "^7.1.0",
     "csv-parse": "^4.16.3",
     "csv-writer": "^1.6.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "elliptic": "^6.5.4",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
-    "inquirer": "^8.0.0",
+    "inquirer": "^8.2.3",
     "multiformats": "^9.5.1",
     "mute-stdout": "^2.0.0",
     "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
     "node-fetch": "^2.6.0",
-    "ora": "3.1.0",
+    "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
     "progress": "^2.0.3",
-    "sha3": "^2.1.4"
+    "sha3": "^2.1.4",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/elliptic": "^6.4.14",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node-fetch": "^2.6.2",
+    "@types/pouchdb": "^6.4.0",
+    "@types/progress": "^2.0.5",
+    "cpx": "^1.5.0"
   }
 }
