--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "main": "dist/cli/fresh.js",
+  "main": "dist/lib/index.js",
   "bin": {
     "fresh": "dist/cli/index.js"
   },
