--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.test.ts"],
   "include": ["./src"]
 }
