--- a/package.json
+++ b/package.json
@@ -47,17 +47,12 @@
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.3",
-    "multiformats": "^9.5.1",
-    "mute-stdout": "^2.0.0",
-    "nebulus": "0.0.11",
     "nft.storage": "^3.3.0",
-    "node-fetch": "^2.6.0",
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
     "progress": "^2.0.3",
-    "sha3": "^2.1.4",
-    "typescript": "^4.7.4"
+    "sha3": "^2.1.4"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
@@ -70,6 +65,7 @@
     "@typescript-eslint/parser": "^5.32.0",
     "cpx": "^1.5.0",
     "eslint": "^8.21.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
