--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "rootDir": "./src",
     "declaration": true
   },
-  "exclude": ["node_modules", "**/*.test.ts"],
+  "exclude": ["node_modules", "**/*.test.ts", "src/lib/testHelpers.ts"],
   "include": ["./src"]
 }
