Switch to YAML config

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@onflow/fcl": "^1.2.0",
     "@onflow/types": "^1.0.3",
     "@onflow/util-address": "0.0.0",
+    "@tuplo/envsubst": "^1.15.0",
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "csv-parse": "^4.16.3",
@@ -47,6 +48,7 @@
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.3",
+    "js-yaml": "^4.1.0",
     "nft.storage": "^3.3.0",
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
