--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.2.1",
     "@types/jest": "^28.1.6",
+    "@types/js-yaml": "^4.0.5",
     "@types/node-fetch": "^2.6.2",
     "@types/pouchdb": "^6.4.0",
     "@types/progress": "^2.0.5",
