--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
-    "progress": "^2.0.3",
-    "sha3": "^2.1.4"
+    "progress": "^2.0.3"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
