--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "main": "dist/lib/index.js",
+  "exports": {
+    ".": "./dist/lib/index.js",
+    "./crypto": "./dist/lib/crypto/index.js"
+  },
   "bin": {
     "fresh": "dist/cli/index.js"
   },
