--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "inquirer": "^8.2.2",
     "js-yaml": "^4.1.0",
     "nft.storage": "^3.3.0",
+    "node-fetch": "^2.6.7",
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
