--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freshmint",
-  "version": "0.0.17-alpha.3",
+  "version": "0.0.18-alpha",
   "description": "The minty fresh way to launch an NFT project.",
   "contributors": [
     "Mackenzie Kieran",
