--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fresh": "dist/cli/index.js"
   },
   "scripts": {
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --bail",
     "prebuild": "tsc --build --clean",
     "build": "tsc",
     "postbuild": "npm run copy-cli-templates && npm run copy-lib-templates",
