--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Mackenzie Kieran",
     "Peter Siemens <peterjsiemens@gmail.com>"
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": "github:packagelabs/freshmint",
   "keywords": [
     "nft",
