--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -16,26 +16,19 @@
     "node": ">=14.0.0"
   },
   "bin": {
-    "fresh": "dist/cli/index.js"
+    "fresh": "dist/index.js"
   },
   "scripts": {
     "test": "jest --runInBand --bail",
-    "prebuild": "tsc --build --clean",
-    "build": "tsc",
-    "postbuild": "npm run copy-cli-templates && npm run copy-lib-templates",
-    "dev": "tsc --watch",
-    "copy-cli-templates": "cpx --include-empty-dirs \"src/cli/templates/**\" dist/cli/templates",
-    "copy-lib-templates": "cpx --include-empty-dirs \"src/lib/templates/**\" dist/lib/templates",
-    "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --fix --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "build": "tsup index.ts --clean --minify --format esm,cjs",
+    "postbuild": "cpx --include-empty-dirs \"templates/**\" dist/templates",
+    "dev": "npm run build -- --watch",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "@onflow/decode": "0.0.11",
-    "@onflow/fcl": "^1.2.0",
-    "@onflow/types": "^1.0.3",
-    "@onflow/util-address": "0.0.0",
     "@freshmint/core": "*",
+    "@onflow/decode": "0.0.11",
+    "@onflow/types": "^1.0.3",
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "csv-parse": "^4.16.3",
@@ -51,8 +44,7 @@
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
-    "progress": "^2.0.3",
-    "sha3": "^2.1.4"
+    "progress": "^2.0.3"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
@@ -63,14 +55,10 @@
     "@types/node-fetch": "^2.6.2",
     "@types/pouchdb": "^6.4.0",
     "@types/progress": "^2.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
     "cpx": "^1.5.0",
-    "eslint": "^8.21.0",
     "jest": "^28.1.3",
-    "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
-    "turbo": "^1.5.5",
+    "tsup": "^6.2.3",
     "typescript": "^4.7.4"
   }
 }
