Update eslint config to ignore JS files

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,5 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off"
   },
-  "ignorePatterns": ["node_modules", "**/node_modules/*", "**/dist/*"]
+  "ignorePatterns": ["node_modules", "**/node_modules/*", "**/dist/*", "**/*.js"]
 }
