Move Cadence NFT templates into common folder

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**"],
+      "inputs": ["./cadence/**"]
     },
     "lint": {
       "outputs": []
