Add Next.js web app template

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,11 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off"
   },
-  "ignorePatterns": ["node_modules", "**/node_modules/*", "**/dist/*", "**/*.js"]
+  "ignorePatterns": [
+    "node_modules",
+    "**/node_modules/*",
+    "**/dist/*",
+    "**/*.js",
+    "packages/freshmint/templates/**"
+  ]
 }
