--- a/packages/freshmint/templates/web/package.json
+++ b/packages/freshmint/templates/web/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "4.8.3"
   }
 }
