--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshmint/core",
-  "version": "0.0.29-alpha",
+  "version": "0.0.30-demo",
   "description": "The minty fresh way to launch an NFT project.",
   "contributors": [
     "Mackenzie Kieran",
