Copy templates while building in watch mode

--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -22,7 +22,7 @@
     "test": "jest --runInBand --bail",
     "build": "tsup index.ts --clean --minify --format esm,cjs",
     "postbuild": "cpx --include-empty-dirs \"templates/**\" dist/templates",
-    "dev": "npm run build -- --watch",
+    "dev": "npm run build -- --watch --onSuccess \"npm run postbuild\"",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
