--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freshmint",
-  "version": "0.0.30-demo",
+  "version": "0.0.31-alpha",
   "description": "The minty fresh way to launch an NFT project.",
   "contributors": [
     "Mackenzie Kieran",
@@ -26,7 +26,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "@freshmint/core": "*",
+    "@freshmint/core": "0.0.31-alpha",
     "@onflow/decode": "0.0.11",
     "@onflow/types": "^1.0.3",
     "chalk": "^4.1.0",
