--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
+    "test": {
+      "outputs": []
+    },
     "lint": {
       "outputs": []
     },
