--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 name: CI
- 
+
 on:
   push:
     branches: ["main", "alpha"]
   pull_request:
     types: [opened, synchronize]
- 
+
 jobs:
   build:
       name: Build and Test
@@ -17,18 +17,21 @@ jobs:
           uses: actions/checkout@v2
           with:
             fetch-depth: 2
- 
+
         - name: Setup Node.js environment
           uses: actions/setup-node@v2
           with:
             node-version: 16
             cache: 'npm'
- 
+
         - name: Install dependencies
           run: npm install
- 
+
         - name: Build
           run: npm run build
- 
+
+        - name: Install Flow CLI
+          run: sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)"
+
         - name: Test
           run: npm run test
