--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -39,6 +39,7 @@
     "inquirer": "^8.2.2",
     "js-yaml": "^4.1.0",
     "nft.storage": "^3.3.0",
+    "mime-types": "^2.1.35",
     "node-fetch": "^2.6.7",
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
