--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -43,7 +43,8 @@
     "ora": "^5.4.1",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "yup": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
