Upload IPFS files in batches

--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -25,26 +25,26 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "@freshmint/core": "*",
+    "@freshmint/core": "^0.2.3-alpha",
+    "@ipld/car": "^5.0.1",
     "@onflow/decode": "0.0.11",
     "@onflow/flow-cadut": "^0.2.0-alpha.9",
     "@onflow/types": "^1.0.3",
     "chalk": "^4.1.0",
     "commander": "^9.4.1",
-    "csv-parse": "^4.16.3",
     "dotenv": "^16.0.1",
     "elliptic": "^6.5.4",
     "fast-csv": "^4.3.6",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.2",
+    "ipfs-car": "^0.9.1",
     "js-yaml": "^4.1.0",
     "mime-types": "^2.1.35",
+    "multiformats": "^10.0.2",
     "nft.storage": "^7.0.0",
     "node-fetch": "^2.6.7",
     "ora": "^5.4.1",
-    "pouchdb": "^7.2.2",
-    "pouchdb-find": "^7.2.2",
     "progress": "^2.0.3",
     "yup": "^1.0.0-beta.7"
   },
@@ -54,7 +54,6 @@
     "@types/inquirer": "^8.2.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node-fetch": "^2.6.2",
-    "@types/pouchdb": "^6.4.0",
     "@types/progress": "^2.0.5",
     "cpx": "^1.5.0",
     "tsup": "^6.2.3",
