Move templates into generate directory

--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "build": "tsup index.ts --clean --minify --format esm,cjs",
-    "postbuild": "cpx --include-empty-dirs \"templates/**\" dist/templates",
+    "postbuild": "cpx --include-empty-dirs \"generate/templates/**\" dist/templates",
     "dev": "npm run build -- --watch --onSuccess \"npm run postbuild\"",
     "lint": "eslint . --ext .ts"
   },
