Make contract account configurable

--- a/packages/freshmint/generate/templates/freshmint.yaml
+++ b/packages/freshmint/generate/templates/freshmint.yaml
@@ -15,6 +15,10 @@ contract:
           name: name
           description: description
           thumbnail: thumbnail
+  account:
+    emulator: emulator-account
+    testnet: testnet-account
+    mainnet: mainnet-account
 
 collection:
   name: {{ name }}
