--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshmint/core",
-  "version": "0.2.3-alpha",
+  "version": "0.2.3-alpha.1",
   "description": "The core templates and logic that power Freshmint.",
   "contributors": [
     "Mackenzie Kieran",
