--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freshmint",
-  "version": "0.1.0-alpha",
+  "version": "0.2.0",
   "description": "The minty fresh way to launch an NFT project.",
   "contributors": [
     "Mackenzie Kieran",
@@ -25,7 +25,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "@freshmint/core": "^0.3.0-alpha",
+    "@freshmint/core": "^0.4.0",
     "@ipld/car": "^4.1.6",
     "@onflow/decode": "0.0.11",
     "@onflow/flow-cadut": "^0.2.0-alpha.9",
