--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "@types/node": "^18.11.13",
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "eslint": "^8.24.0",
     "prettier": "latest",
