Update git URLs to new repository

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
     "Peter Siemens <peterjsiemens@gmail.com>"
   ],
   "license": "Apache-2.0",
-  "repository": "github:packagelabs/freshmint",
+  "repository": "github:dapperlabs/freshmint",
   "keywords": [
     "nft",
     "blockchain"
