Show tx status in web UI

--- a/packages/freshmint/package.json
+++ b/packages/freshmint/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsup index.ts --clean --minify --format esm,cjs",
     "postbuild": "cpx --include-empty-dirs \"generate/templates/**\" dist/templates",
-    "dev": "npm run build -- --watch --onSuccess \"npm run postbuild\"",
+    "dev": "tsup index.ts --clean --format esm,cjs --watch --onSuccess \"npm run postbuild\"",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
