--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           run: npm run build
 
         - name: Install Flow CLI
-          run: sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)"
+          run: sh -ci "$(curl -fsSL https://raw.githubusercontent.com/onflow/flow-cli/master/install.sh)"
 
         - name: Test
           run: npm run test
