--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshmint/react",
-  "version": "0.0.33-alpha",
+  "version": "0.1.0",
   "license": "Apache-2.0",
   "repository": "github:dapperlabs/freshmint",
   "engines": {
